--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -167,7 +167,7 @@ body {
   z-index: 99999;
   position: static;
   width: 100vw;
-  background-color: rgba(20, 20, 20, 0.8);
+  background-color: var(--bg-card);
   height: 64px;
 
   .logo-container{
